tests/ui/crablang-2018/uniform-paths/prelude-fail.stderr
error[E0432]: unresolved import `crablangfmt`
  --> $DIR/prelude-fail.rs:4:5
   |
LL | use crablangfmt::skip as imported_crablangfmt_skip;
   |     ^^^^^^^ `crablangfmt` is a tool module, not a module

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0432`.
