tests/ui/crablang-2018/uniform-paths/prelude-fail.rs
// edition:2018

// Tool attribute
use crablangfmt::skip as imported_crablangfmt_skip; //~ ERROR unresolved import `crablangfmt`

fn main() {}
